# advent-of-code

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
2020/: day_10.py  day_12.py  day_18.py  day_20.py
2023/day1/: run.py
2023/day2/: run.py
2023/day3/: run.py
2023/day4/: run.py
2023/day9/: run.py
