[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Lynochka <lina.astrakova@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
bandit = "^1.7.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
